style: prevent main title bar shrinking on smaller screens when left sidebar open

--- a/layout/main.css
+++ b/layout/main.css
@@ -71,6 +71,9 @@ body {
    flex-wrap: nowrap;
    align-items: stretch;
 }
+.mobile-layout .main-titlebar {
+   min-width: 100vw;
+}
 
 .main-titlebar-item {
    line-height:1;
